# dovekie

./: .gitignore  README.md  dovekie.js  editor.js  package.json  package_rust.sh  sparklines.js  style.css  vite.config.js
examples/: basic.html
public/style/: editor.css
rust/: Cargo.toml
rust/src/: lib.rs
